Version 3.4.7 - 2015-11-09
* Bug fixes (see mercurial logs for details)

Version 3.4.6 - 2015-09-07
* Bug fixes (see mercurial logs for details)

Version 3.4.5 - 2015-07-13
* Bug fixes (see mercurial logs for details)

Version 3.4.4 - 2015-05-19
* Bug fixes (see mercurial logs for details)

Version 3.4.3 - 2015-03-30
* Bug fixes (see mercurial logs for details)

Version 3.4.2 - 2015-02-16
* Bug fixes (see mercurial logs for details)

Version 3.4.1 - 2014-12-03
* Bug fixes (see mercurial logs for details)

Version 3.4.0 - 2014-10-20
* Bug fixes (see mercurial logs for details)
* Use literal_eval instead of safe_eval (CVE-2014-6633)
* Prevent double underscore in safe_eval (CVE-2014-6633)
* Add pre-validation on button
* Model and Field access checked only if _check_access is set
* Add check_access to RPC
* Add check_access to Wizard and Report
* Add support for domain_<field name> method
* Refactor configuration file and command line
* Use the context of the relation field for instanciation
* Use a configuration field for logging
* Add translated descriptor for Selection field
* Add tree_state attribute on tree view
* Allow to sync XML data
* Remove on_change calls in Model.default_get
* Add group call to on_change
* Add UnionMixin
* Allow to disable sorting of dictionary field's selection
* Add active field to views of action window
* Make global cache depends on explicit context keys
* Don't add to global cache Binary fields
* Add MatchMixin
* Add image widget to tree
* Remove context, current_date and time from record rule evaluation

Version 3.2.0 - 2014-04-21
* Bug fixes (see mercurial logs for details)
* Add restore_history to ModelSQL
* Add history revisions
* Add the multi selection widget
* Add index to one2many's on_change
* Remove auto-refresh on Action Window
* Add support of domain for non-relation field
* Manage microseconds in JSON-RPC and XML-RPC
* Remove Sha field
* Add password widget
* Add Len to PYSON
* Use bcrypt to hash password if possible